# PTWorld

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/androidTest/java/com/example/ptworld/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/: ProfileDTO.java
app/src/main/java/com/example/ptworld/: AdapterBoardInsert.java  AdapterContentsHistory.java  AdapterLikeList.java  AdapterMain.java  AdapterMain_2.java  AdapterMain_3.java  AdapterMain_4.java  AdapterMessage.java  AdapterMessage2.java  AdapterMoreView.java  AdapterNotiHistoryList.java  AdapterProfile.java  AdapterReReply.java  AdapterRecomendation.java  AdapterReply.java  AdapterSNS.java  AdapterSNSPage.java  AlbumAdapter.java  BoardInsert.java  BoardObject.java  BottomNavBar.java  ChattingDTO.java  Contents.java  ContentsDTO.java  ContentsHistory.java  Crawling_Thread.java  FollowerFollowingCount.java  FragmentBoardInsert.java  FragmentMain.java  FragmentMyPage.java  FragmentNotiHistory.java  FragmentPain_ankle.java  FragmentPain_back.java  FragmentPain_chest.java  FragmentPain_chin.java  FragmentPain_elbow.java  FragmentPain_headache.java  FragmentPain_knee.java  FragmentPain_neck.java  FragmentPain_pelvis.java  (+74 more)
app/src/main/java/com/example/ptworld/Activity/: BoardInsert.java  BottomNavBar.java  BroadCastListActivity.kt  CallActivity.java  ConnectActivity.java  Contents.java  ContentsHistory.java  (+29 more)
app/src/main/jniLibs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/res/drawable/: border.xml  border_chatting.xml  border_imageselect.xml  border_imageselect2.xml  border_main.xml  border_profile_update.xml  side_nav_bar.xml
app/src/main/res/layout/: activity_board_insert.xml  activity_boardinsert.xml  activity_bottom_nav_bar.xml  activity_broad_cast_list.xml  activity_call.xml  activity_connect.xml  activity_contents.xml  activity_contents_history.xml  activity_f_fmepg_test.xml  activity_follower_following_count.xml  activity_fragment_board_insert.xml  activity_go_broad_cast.xml  activity_insert__client.xml  activity_insert__trainner.xml  activity_like_list.xml  activity_likelist.xml  activity_main.xml  activity_main2.xml  activity_main_contents.xml  activity_main_drawer.xml  activity_media.xml  activity_message.xml  activity_more_view.xml  activity_more_view_contents.xml  activity_my_page.xml  activity_notihistory.xml  activity_one_contents_history.xml  activity_one_reply.xml  activity_one_rereply.xml  activity_popup__insert_user2.xml  activity_popup__select_setting_profile_image.xml  activity_popup__sns.xml  activity_push.xml  activity_reply.xml  activity_seeing_broad_cast.xml  activity_snscontents.xml  activity_snsmain.xml  activity_snsprofile.xml  activity_splash.xml  activity_test.xml  (+18 more)
app/src/main/res/menu/: activity_main_drawer_drawer.xml  menu.xml  menu_bottomnavigationview.xml
app/src/main/res/values/: colors.xml  kakao_strings.xml  strings.xml  styles.xml
app/src/test/java/com/example/ptworld/: ExampleUnitTest.java
(+112 files in other folders)
